Adding ISO8601 duration support to Azure.CSharp generator
This is a fix for this issue: https://github.com/Azure/autorest/issues/390
Some of the templates are duplicated between the CSharp and Azure.CSharp
flavors, so we have to be careful to make changes in both places. To validate
the fix, I simply copied some of the duration tests to the Azure.CSharp test
project. This was for expedience. We should consider better approaches to
ensuring parity of test coverage between flavors.

--- a/AutoRest/Generators/NodeJS/Azure.NodeJS.Tests/AutoRest.Generator.Azure.NodeJS.Tests.csproj
+++ b/AutoRest/Generators/NodeJS/Azure.NodeJS.Tests/AutoRest.Generator.Azure.NodeJS.Tests.csproj
@@ -109,49 +109,7 @@
     <Content Include="AcceptanceTests\startServer.js" />
     <Content Include="AcceptanceTests\subscriptionIdApiVersion.js" />
     <Content Include="AcceptanceTests\testlist.txt" />
-    <Content Include="Expected\AcceptanceTests\AzureReport\autoRestReportServiceForAzure.js" />
-    <Content Include="Expected\AcceptanceTests\AzureReport\models\errorModel.js" />
-    <Content Include="Expected\AcceptanceTests\AzureReport\models\index.js" />
-    <Content Include="Expected\AcceptanceTests\AzureSpecials\autoRestAzureSpecialParametersTestClient.js" />
-    <Content Include="Expected\AcceptanceTests\AzureSpecials\models\errorModel.js" />
-    <Content Include="Expected\AcceptanceTests\AzureSpecials\models\index.js" />
-    <Content Include="Expected\AcceptanceTests\AzureSpecials\operations\apiVersionDefault.js" />
-    <Content Include="Expected\AcceptanceTests\AzureSpecials\operations\apiVersionLocal.js" />
-    <Content Include="Expected\AcceptanceTests\AzureSpecials\operations\index.js" />
-    <Content Include="Expected\AcceptanceTests\AzureSpecials\operations\skipUrlEncoding.js" />
-    <Content Include="Expected\AcceptanceTests\AzureSpecials\operations\subscriptionInCredentials.js" />
-    <Content Include="Expected\AcceptanceTests\AzureSpecials\operations\subscriptionInMethod.js" />
-    <Content Include="Expected\AcceptanceTests\AzureSpecials\operations\xMsClientRequestId.js" />
-    <Content Include="Expected\AcceptanceTests\Head\autoRestHeadTestService.js" />
-    <Content Include="Expected\AcceptanceTests\Head\models\index.js" />
-    <Content Include="Expected\AcceptanceTests\Head\operations\httpSuccess.js" />
-    <Content Include="Expected\AcceptanceTests\Head\operations\index.js" />
-    <Content Include="Expected\AcceptanceTests\Lro\autoRestLongRunningOperationTestService.js" />
-    <Content Include="Expected\AcceptanceTests\Lro\models\index.js" />
-    <Content Include="Expected\AcceptanceTests\Lro\models\operationResult.js" />
-    <Content Include="Expected\AcceptanceTests\Lro\models\operationResultError.js" />
-    <Content Include="Expected\AcceptanceTests\Lro\models\product.js" />
-    <Content Include="Expected\AcceptanceTests\Lro\models\sku.js" />
-    <Content Include="Expected\AcceptanceTests\Lro\models\subProduct.js" />
-    <Content Include="Expected\AcceptanceTests\Lro\operations\index.js" />
-    <Content Include="Expected\AcceptanceTests\Lro\operations\lRORetrys.js" />
-    <Content Include="Expected\AcceptanceTests\Lro\operations\lROs.js" />
-    <Content Include="Expected\AcceptanceTests\Lro\operations\lROSADs.js" />
-    <Content Include="Expected\AcceptanceTests\Lro\operations\lROsCustomHeader.js" />
-    <Content Include="Expected\AcceptanceTests\Paging\autoRestPagingTestService.js" />
-    <Content Include="Expected\AcceptanceTests\Paging\models\index.js" />
-    <Content Include="Expected\AcceptanceTests\Paging\models\operationResult.js" />
-    <Content Include="Expected\AcceptanceTests\Paging\models\product.js" />
-    <Content Include="Expected\AcceptanceTests\Paging\models\productProperties.js" />
-    <Content Include="Expected\AcceptanceTests\Paging\models\productResult.js" />
-    <Content Include="Expected\AcceptanceTests\Paging\operations\index.js" />
-    <Content Include="Expected\AcceptanceTests\Paging\operations\paging.js" />
-    <Content Include="Expected\AcceptanceTests\ResourceFlattening\autoRestResourceFlatteningTestService.js" />
-    <Content Include="Expected\AcceptanceTests\ResourceFlattening\models\errorModel.js" />
-    <Content Include="Expected\AcceptanceTests\ResourceFlattening\models\flattenedProduct.js" />
-    <Content Include="Expected\AcceptanceTests\ResourceFlattening\models\index.js" />
-    <Content Include="Expected\AcceptanceTests\ResourceFlattening\models\resourceCollection.js" />
-    <Content Include="Expected\AcceptanceTests\StorageManagementClient\models\bar.js">
+    <Content Include="Expected\**\*.js" >
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Expected\AcceptanceTests\StorageManagementClient\models\checkNameAvailabilityResult.js">
