--- a/AutoRest/Generators/CSharp/Azure.CSharp.Tests/AutoRest.Generator.Azure.CSharp.Tests.csproj
+++ b/AutoRest/Generators/CSharp/Azure.CSharp.Tests/AutoRest.Generator.Azure.CSharp.Tests.csproj
@@ -83,6 +83,10 @@
       <Link>AutoRest.json</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="..\..\..\TestServer\swagger\body-duration.json">
+      <Link>Swagger\body-duration.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="app.config" />
   </ItemGroup>
   <Target Name="CopyExpectedFiles" AfterTargets="BeforeBuild">
@@ -96,7 +100,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Expected\**\*.cs"/>
+    <Compile Include="Expected\**\*.cs" />
     <Compile Include="CSharpAzureCodeNamingFrameworkTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AcceptanceTests.cs" />
