modified app.js and travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ mono:
   - alpha
 install:
   - ls -al
+  - touch /home/travis/build/amarzavery/AutoRest/server.log
+  - cat /home/travis/build/amarzavery/AutoRest/server.log
   - curl -sSL https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.sh | sh && source ~/.dnx/dnvm/dnvm.sh && dnvm upgrade
   - npm install -g npm@'>=1.4.3'
   - npm install
@@ -16,9 +18,10 @@ script:
   - dnvm install 1.0.0-beta7
   - dnvm use 1.0.0-beta7 -persistent
   - gulp
-after_failure:
+after_script:
   - echo "========== Server log: ============"
   - pwd
+  - cat /home/travis/build/amarzavery/AutoRest/server.log
   - ls -al
   - ls -al TestResults
   - cat TestResults/*.log
