--- a/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime/project.json
+++ b/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime/project.json
@@ -16,6 +16,7 @@
         "dnxcore50": {
             "dependencies": {
                 "System.IO": "4.0.10",
+                "System.IO.FileSystem": "4.0.0",
                 "System.Diagnostics.Tools": "4.0.0",
                 "System.Net.Http": "4.0.0",
                 "System.Threading.Tasks": "4.0.10",
