--- a/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure/project.json
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure/project.json
@@ -7,7 +7,7 @@
     "licenseUrl": "https://raw.githubusercontent.com/Microsoft/dotnet/master/LICENSE",
 
     "dependencies": {
-        "Microsoft.Rest.ClientRuntime": "",
+        "Microsoft.Rest.ClientRuntime": ""
     },
 
     "commands": {
