--- a/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime/project.json
+++ b/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime/project.json
@@ -17,6 +17,7 @@
             "dependencies": {
                 "System.IO": "4.0.10",
                 "System.IO.FileSystem": "4.0.0",
+                "runtime.unix.System.Console": "4.0.0-beta-23409",
                 "System.Diagnostics.Tools": "4.0.0",
                 "System.Net.Http": "4.0.0",
                 "System.Threading.Tasks": "4.0.10",
