--- a/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure/project.json
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure/project.json
@@ -18,6 +18,7 @@
             "dependencies": {
                 "System.IO": "4.0.10",
                 "System.IO.FileSystem": "4.0.0",
+                "System.Console": "4.0.0-beta-23409",
                 "System.Diagnostics.Tools": "4.0.0",
                 "System.Net.Http": "4.0.0",
                 "System.Threading.Tasks": "4.0.10",
