--- a/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure/project.json
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure/project.json
@@ -20,6 +20,7 @@
                 "System.IO.FileSystem": "4.0.0",
                 "System.Console": "4.0.0-beta-23409",
                 "System.Diagnostics.Tools": "4.0.0",
+                "System.Diagnostics.TraceSource": "4.0.0-beta-23409",
                 "System.Net.Http": "4.0.0",
                 "System.Threading.Tasks": "4.0.10",
                 "System.Xml.ReaderWriter": "4.0.10",
