Add tracing to app.config of Cgeneric and azure test projects

--- a/AutoRest/Generators/CSharp/CSharp.Tests/app.config
+++ b/AutoRest/Generators/CSharp/CSharp.Tests/app.config
@@ -3,4 +3,47 @@
   <appSettings>
     <add key="xunit.methodDisplay" value="method"/>
   </appSettings>
+  <system.diagnostics>
+    <sources>
+      <source name="System.Net" tracemode="protocolonly" maxdatasize="1024">
+        <listeners>
+          <add name="System.Net"/>
+        </listeners>
+      </source>
+      <source name="System.Net.Cache" tracemode="protocolonly" maxdatasize="1024">
+        <listeners>
+          <add name="System.Net"/>
+        </listeners>
+      </source>
+      <source name="System.Net.Http" tracemode="protocolonly" maxdatasize="1024">
+        <listeners>
+          <add name="System.Net "/>
+        </listeners>
+      </source>
+      <source name="System.Net.Sockets" tracemode="protocolonly" maxdatasize="1024">
+        <listeners>
+          <add name="System.Net"/>
+        </listeners>
+      </source>
+      <source name="System.Net.WebSockets" tracemode="protocolonly" maxdatasize="1024">
+        <listeners>
+          <add name="System.Net"/>
+        </listeners>
+      </source>
+    </sources>
+    <switches>
+      <add name="System.Net" value="Verbose"/>
+      <add name="System.Net.Cache" value="Verbose"/>
+      <add name="System.Net.Http" value="Verbose"/>
+      <add name="System.Net.Sockets" value="Verbose"/>
+      <add name="System.Net.WebSockets" value="Verbose"/>
+    </switches>
+    <sharedListeners>
+      <add name="System.Net"
+        type="System.Diagnostics.TextWriterTraceListener"
+        initializeData="/home/travis/build/amarzavery/AutoRest/server.log"
+      />
+    </sharedListeners>
+    <trace autoflush="true"/>
+  </system.diagnostics>
 </configuration>
