--- a/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime.nuspec
@@ -22,6 +22,9 @@
     <copyright>Copyright (c) Microsoft Corporation</copyright>
     <tags>Microsoft AutoRest ClientRuntime REST</tags>
     <dependencies>
+      <group targetFramework="net45">
+        <dependency id="Newtonsoft.Json" version="6.0.8"/>
+      </group>
       <group targetFramework="portable-net45+win8+wpa81">
         <dependency id="Newtonsoft.Json" version="6.0.8"/>
       </group>
