--- a/AutoRest/Generators/CSharp/CSharp.Tests/app.config
+++ b/AutoRest/Generators/CSharp/CSharp.Tests/app.config
@@ -1,49 +1,55 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="xunit.methodDisplay" value="method"/>
+    <add key="xunit.methodDisplay" value="method" />
+    <add key="xunit.diagnosticMessages" value="true" />
   </appSettings>
   <system.diagnostics>
     <sources>
       <source name="System.Net" tracemode="protocolonly" maxdatasize="1024">
         <listeners>
-          <add name="System.Net"/>
+          <add name="System.Net" />
         </listeners>
       </source>
       <source name="System.Net.Cache" tracemode="protocolonly" maxdatasize="1024">
         <listeners>
-          <add name="System.Net"/>
+          <add name="System.Net" />
         </listeners>
       </source>
       <source name="System.Net.Http" tracemode="protocolonly" maxdatasize="1024">
         <listeners>
-          <add name="System.Net "/>
+          <add name="System.Net " />
         </listeners>
       </source>
       <source name="System.Net.Sockets" tracemode="protocolonly" maxdatasize="1024">
         <listeners>
-          <add name="System.Net"/>
+          <add name="System.Net" />
         </listeners>
       </source>
       <source name="System.Net.WebSockets" tracemode="protocolonly" maxdatasize="1024">
         <listeners>
-          <add name="System.Net"/>
+          <add name="System.Net" />
         </listeners>
       </source>
     </sources>
     <switches>
-      <add name="System.Net" value="Verbose"/>
-      <add name="System.Net.Cache" value="Verbose"/>
-      <add name="System.Net.Http" value="Verbose"/>
-      <add name="System.Net.Sockets" value="Verbose"/>
-      <add name="System.Net.WebSockets" value="Verbose"/>
+      <add name="System.Net" value="Verbose" />
+      <add name="System.Net.Cache" value="Verbose" />
+      <add name="System.Net.Http" value="Verbose" />
+      <add name="System.Net.Sockets" value="Verbose" />
+      <add name="System.Net.WebSockets" value="Verbose" />
     </switches>
     <sharedListeners>
-      <add name="System.Net"
-        type="System.Diagnostics.TextWriterTraceListener"
-        initializeData="/home/travis/build/amarzavery/AutoRest/server.log"
-      />
+      <add name="System.Net" type="System.Diagnostics.TextWriterTraceListener" initializeData="server.log" />
     </sharedListeners>
-    <trace autoflush="true"/>
+    <trace autoflush="true" />
   </system.diagnostics>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="xunit.core" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.3179" newVersion="2.1.0.3179" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
