--- a/AutoRest/Generators/CSharp/Azure.CSharp.Tests/packages.config
+++ b/AutoRest/Generators/CSharp/Azure.CSharp.Tests/packages.config
@@ -10,4 +10,5 @@
   <package id="xunit.extensions" version="2.0.0" targetFramework="net451" />
   <package id="xunit.runner.msbuild" version="2.1.0" targetFramework="net45" />
   <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.runner.console" version="2.1.0" targetFramework="net45" />
 </packages>
