Updated Ruby references in the ChangeLog.txt and in code

--- a/AutoRest/AutoRest/AutoRest.Release.json
+++ b/AutoRest/AutoRest/AutoRest.Release.json
@@ -19,6 +19,16 @@
         "includeCredentials": "true",
         "requireOperationId": "true"
       }
+    },
+    "Ruby": {
+      "type": "RubyCodeGenerator, AutoRest.Generator.Ruby"
+    },
+    "Azure.Ruby": {
+      "type": "AzureRubyCodeGenerator, AutoRest.Generator.Azure.Ruby",
+      "settings": {
+        "includeCredentials": "true",
+        "requireOperationId": "true"
+      }
     }
   },
   "modelers": {
