Modified travis & updated xunit@2.1.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: csharp
 mono:
-  - alpha
+  - beta
 install:
   - curl -sSL https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.sh | sh && source ~/.dnx/dnvm/dnvm.sh && dnvm upgrade
   - npm install -g npm@'>=1.4.3'
@@ -12,11 +12,14 @@ install:
   - unzip gradle-2.6-bin.zip
   - PATH=$PATH:$(pwd)/gradle-2.6/bin
 script:
-  - dnvm install 1.0.0-beta7
-  - dnvm use 1.0.0-beta7 -persistent
+  - dnvm install 1.0.0-beta8
+  - dnvm use 1.0.0-beta8 -persistent
   - gulp
-after_failure:
+after_script:
   - echo "========== Server log: ============"
+  - pwd
+  - ls -al
+  - ls -al TestResults
   - cat TestResults/*.log
 notifications:
   slack:
