Adding x-ms-discriminator support for Ruby and tests for all languages
Custom discriminators already worked as-is for C#, Node.js, and Java. Ruby
required more work to get right. The approach I took is modeled loosely off
the one used in the generated Node.js code.

--- a/AutoRest/Generators/NodeJS/NodeJS.Tests/AutoRest.Generator.NodeJS.Tests.csproj
+++ b/AutoRest/Generators/NodeJS/NodeJS.Tests/AutoRest.Generator.NodeJS.Tests.csproj
@@ -2,7 +2,7 @@
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\..\..\..\packages\xunit.runner.visualstudio.2.1.0\build\net20\xunit.runner.visualstudio.props" Condition="Exists('..\..\..\..\packages\xunit.runner.visualstudio.2.1.0\build\net20\xunit.runner.visualstudio.props')" />
   <Import Project="..\..\..\..\packages\xunit.core.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.core.props" Condition="Exists('..\..\..\..\packages\xunit.core.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.core.props')" />
-   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\..\</SolutionDir>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -117,6 +117,14 @@
     <None Include="Expected\AcceptanceTests\BodyComplex\operations\index.d.ts">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <TypeScriptCompile Include="AcceptanceTests\acceptanceTests.ts" />
+    <TypeScriptCompile Include="AcceptanceTests\complexTypesTests.ts" />
+    <TypeScriptCompile Include="AcceptanceTests\coverageTest.ts" />
+    <TypeScriptCompile Include="AcceptanceTests\headerTests.ts" />
+    <TypeScriptCompile Include="AcceptanceTests\requiredOptionalTests.ts" />
+    <TypeScriptCompile Include="AcceptanceTests\startServer.ts" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
