Improve python client runtime.
This is a combination of 5 commits.
Some tidy-ups based on tests

Made derserialization accommodate string types

Restructured project

improved streaming sample

Added package dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -236,6 +236,7 @@ ClientRuntimes/Python/Python35-64-ENV/pyvenv.cfg
 ClientRuntimes/Python/Python35-64-ENV/Scripts/activate.bat
 ClientRuntimes/Python/Python35-64-ENV/Scripts/Activate.ps1
 ClientRuntimes/Python/Python35-64-ENV/Scripts/deactivate.bat
+*.pyc
 
 #dnx installation
 dnx-clr-win-x86*/
